fix top-right caret alignment

--- a/quartz-js/components/select/styles/select.scss
+++ b/quartz-js/components/select/styles/select.scss
@@ -121,10 +121,10 @@
   .c-select--dropdown {
     &:after, &:before {
       bottom: 100%;
-      right: 22px;
+      right: 11px;
     }
     &:before {
-      right: 23px;
+      right: 12px;
     }
   }
 }
